{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 21,
  "lineage": "3b9d6963-09af-8eb1-e1a2-5abc19ae1e9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ec1e5f7cfe5ef59",
            "arn": "arn:aws:ec2:us-east-1:381492030584:instance/i-0124d5bab444448e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0124d5bab444448e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "api-estoque-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d02352cfc0d7642e",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_dns": "ec2-54-86-129-40.compute-1.amazonaws.com",
            "public_ip": "54.86.129.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a009e144d7f4abf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e90fb57fee3c894",
            "tags": {
              "Name": "api-estoque-devops-ec2-instance"
            },
            "tags_all": {
              "Name": "api-estoque-devops-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05fd7741a84a45a23"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.api_key_pair",
            "aws_security_group.api_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.api_vpc",
            "data.aws_ami.ubuntu_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "api_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492030584:internet-gateway/igw-0d9d7a8601de31529",
            "id": "igw-0d9d7a8601de31529",
            "owner_id": "381492030584",
            "region": "us-east-1",
            "tags": {
              "Name": "api-estoque-devops-igw"
            },
            "tags_all": {
              "Name": "api-estoque-devops-igw"
            },
            "vpc_id": "vpc-0ed707db01e9a0288"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492030584:route-table/rtb-0ffd0c9b9ad955fdb",
            "id": "rtb-0ffd0c9b9ad955fdb",
            "owner_id": "381492030584",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9d7a8601de31529",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-estoque-devops-public-rt"
            },
            "tags_all": {
              "Name": "api-estoque-devops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed707db01e9a0288"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.api_igw",
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071213df0e3355fd4",
            "region": "us-east-1",
            "route_table_id": "rtb-0ffd0c9b9ad955fdb",
            "subnet_id": "subnet-07e90fb57fee3c894"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.api_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492030584:security-group/sg-05fd7741a84a45a23",
            "description": "Permitir trafego SSH e da API para a instancia EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fd7741a84a45a23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir SSH de qualquer lugar",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir acesso a API",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "api-estoque-devops-sg",
            "name_prefix": "",
            "owner_id": "381492030584",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-estoque-devops-sg"
            },
            "tags_all": {
              "Name": "api-estoque-devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed707db01e9a0288"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492030584:subnet/subnet-07e90fb57fee3c894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e90fb57fee3c894",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492030584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "api-estoque-devops-public-subnet"
            },
            "tags_all": {
              "Name": "api-estoque-devops-public-subnet"
            },
            "vpc_id": "vpc-0ed707db01e9a0288"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492030584:vpc/vpc-0ed707db01e9a0288",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5a4171250eb1e11",
            "default_route_table_id": "rtb-04beb55004b5d68f1",
            "default_security_group_id": "sg-07c9a671ac1f72099",
            "dhcp_options_id": "dopt-0c388a83de23a5f0b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed707db01e9a0288",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04beb55004b5d68f1",
            "owner_id": "381492030584",
            "region": "us-east-1",
            "tags": {
              "Name": "api-estoque-devops-vpc"
            },
            "tags_all": {
              "Name": "api-estoque-devops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}